--- a/Coursera Capstone Project.ipynb
+++ b/Coursera Capstone Project.ipynb
@@ -1,17 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# This is my Capstone Project"
+    "This is my Capstone Project for Coursera"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +31,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "print(\"Hello Capstone Project Course!\")"
    ]
   },
