Coursera Capstone Project Part 1

--- a/Coursera Capstone Project - Part 1.ipynb
+++ b/Coursera Capstone Project - Part 1.ipynb
@@ -5,9 +5,16 @@
    "metadata": {},
    "source": [
     "Business Understanding\\\n",
-    "Idea: predict a possibility of getting in a car accident on the highway\\\n",
+    "Idea: predict a possibility of getting in a car accident on the highway\n",
     "Audience: people who can drive a car and who need to use the highway in order to get to their destination\\\n",
     "Why: most people care about their safety which is why it would make a difference for them to know when it's not that safe to travel on the highway.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idea: predict a possibility of getting in a car accident on the highway"
    ]
   },
   {
