Coursera Project. Part 1

--- a/Coursera Project. Part 1.ipynb
+++ b/Coursera Project. Part 1.ipynb
@@ -4,17 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Business Understanding\\\n",
-    "Idea: predict a possibility of getting in a car accident on the highway\n",
-    "Audience: people who can drive a car and who need to use the highway in order to get to their destination\\\n",
-    "Why: most people care about their safety which is why it would make a difference for them to know when it's not that safe to travel on the highway.\n"
+    "## Business understanding"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea: predict a possibility of getting in a car accident on the highway"
+    "Idea: predict a possibility of getting in a car accident depending on external conditions such as location, weather, road and light conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Target audience: people who can drive a car in Seattle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why: most people care about their safety which is why it would make a difference for them to know when it's not that safe to travel"
    ]
   },
   {
@@ -41,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
