Coursera Project. Part 2

--- a/Coursera Project. Part 2.ipynb
+++ b/Coursera Project. Part 2.ipynb
@@ -18,13 +18,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Object id\\\n",
-    "Address type (Alley/Block/Intersection) and Location - to find out the most dangerous location;\\\n",
-    "Severity code - to see the severity level;\\\n",
-    "Collision type - to predict the most frequent collision types;\\\n",
-    "Incident time, weather, road conditions, light conditions - to predict which external factors affect safety on the road the most;\\\n",
-    "Junction type - to see whether it's related to the intersection;\\\n",
-    "Speeding - to remove the cases where the driver was speeding as it means the accident happened not due to the environmental factors.\\\n"
+    "Object id\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Address type (Alley/Block/Intersection) and Location - to find out the most dangerous location;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Severity code - to see the severity level;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collision type - to predict the most frequent collision types;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Incident time, weather, road conditions, light conditions - to predict which external factors affect safety on the road the most;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Junction type - to see whether it's related to the intersection;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Speeding - to remove the cases where the driver was speeding as it means the accident happened not due to the environmental factors."
    ]
   },
   {
